EPMECO-19961. eco-commons-avro. add support of LocalDateTime for DefaultIntAvroConverter